# schedulerMCP

./: .gitignore  API_SPECIFICATIONS.md  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESEARCH_PAPER.md  pyproject.toml
src/canvas_mcp/: __init__.py  canvas.py  database.py  run.py  schueduling.py  semesterSync.py  workload.py
src/canvas_mcp/data/: .gitkeep
src/canvas_mcp/tests/: __init__.py  testConflicts.py  testPrereqs.py  testSchueduler.py
src/canvas_mcp/tools/: __init__.py  courses.py
src/canvas_mcp/webscrapper/: allCoursesScrapper.py  schuedulerScrapper.py  unified_scraper.py
src/scheduler_mcp/: database.py  run.py  schueduling.py  semesterSync.py
src/scheduler_mcp/tests/: testConflicts.py  testPrereqs.py  testSchueduler.py
src/scheduler_mcp/webscrapper/: allCoursesScrapper.py  schuedulerScrapper.py  unified_scraper.py
